ResponseEntity<>, Optional<>, Response Validation - 09/01/2026